--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,10 @@
 
   <body>
 
+    <a href="/">Home</a>
+    <a href="/auth/login">Log In</a>
+    <a href="/profile/profile">Profile</a>
+
     {{{body}}}
 
     <script src="/js/script.js"></script>
