--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,52 @@
 body {
-  padding: 50px;
+  padding: 50px 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00b7ff;
-}
 
 h1 {
   color: 15px;
+}
+
+.menu ul{
+  list-style: none;
+  margin: 0;
+}
+.menu ul li{
+  padding: 15px;
+  position: relative;
+}
+.menu ul ul{
+  transition: all 0.3s;
+  opacity: 0;
+  position: absolute;
+  visibility: hidden;
+  left: 1%;
+}
+.menu ul li:hover > ul{
+  opacity: 1;
+  visibility: visible;
+}
+.menu ul li a{
+  text-decoration: none;
+}
+
+
+.boton-menu{
+  font-size: 30px;
+  margin: 0;
+  padding: 0;
+  margin-left: -30px;
+  width: 40px;
+}
+
+.despe-menu{
+  background-color: rgb(4, 1, 189);
+  font-size: 20px;
+}
+
+.menu2{
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 0px 10px 0px;
 }
