--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,16 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
+    <div class="menu">
+      <ul>
+        <li class="boton-menu"><a href="">///</a>
+          <ul> 
+            <li class="despe-menu"><a href="/games">Games</a></li>
+            <li class="despe-menu"><a href="/Opinion">Opinions</a></li>
+            <li class="despe-menu"><a href="/top-games">Top Games</a></li>
+          </ul>
+        </li>
+      </ul>
 
+      
+    </div>
+  <div class="menu2">
     <a href="/">Home</a>
     <a href="/auth/login">Log In</a>
     <a href="/profile/profile">Profile</a>
-
+  </div>
     {{{body}}}
 
 
