empieza lo bueno

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
       <ul>
         <li class="boton-menu"><a href="">///</a>
           <ul> 
-            <li class="despe-menu"><a href="/games">Games</a></li>
+            <li class="despe-menu"><a href="/games/game-list">Games</a></li>
             <li class="despe-menu"><a href="/Opinion">Opinions</a></li>
             <li class="despe-menu"><a href="/top-games">Top Games</a></li>
           </ul>
