empieza lo bueno

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,8 +26,8 @@
     </div>
   <div class="menu2">
     <a href="/">Home</a>
+    <a href="/auth/profile">Profile</a>
     <a href="/auth/login">Log In</a>
-    <a href="/profile/profile">Profile</a>
   </div>
     {{{body}}}
 
