--- a/views/games/game-list.hbs
+++ b/views/games/game-list.hbs
@@ -4,7 +4,7 @@
     <div class="oneGame">
      <img src="{{background_image}}" alt="img" width="250px" height="250px">
      <div class="anco-game">
-         <a href=""><p>{{this.name}}</p></a>
+         <a href="/games/game-details/{{this.id}}"><p>{{this.name}}</p></a>
      </div>
      
     </div>
