vista detalles juego

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,6 +1,6 @@
 <h2>Log in</h2>
 
-<form action="/auth/profile" method="POST">
+<form action="/auth/login" method="POST">
    <label> Username
       <input type="text" name="username">
    </label>
