--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -1,1 +1,25 @@
-<h2>Game details</h2>
+<h1>{{data.name}}</h1>
+
+<div>
+    <div>
+        <h4>Imagen</h4>
+        
+        <img src="{{data.url}}" alt="portada">
+
+    </div>
+    <div>
+        <h4>Nota del juego</h4>
+        <p>{{data.rating}}</p>
+
+    </div>
+    <div>
+        <h4>Descripcion</h4>
+        <p>{{data.description}}</p>
+
+    </div>
+    <div>
+        <h4>Release</h4>
+        <p>{{data.released}}</p>
+
+    </div>
+</div>
