--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,21 +26,23 @@
     </div>
   <div class="menu2">
     <a href="/">Home</a>
-    <a href="/auth/profile">Profile</a>
-    <a href="/auth/login">Log In</a>
-    <a href="/auth/logout">Log Out</a>
     
     {{#if isLoggedIn}}
+    <a href="/auth/logout">Log Out</a>
+    <a href="/auth/profile">Profile</a>
+
+    {{else}}
+
+    <a href="/auth/login">Log In</a>
+    
+    
+    {{/if}}
+
+    {{!-- {{#if isLoggedOut}} --}}
 
     {{!-- {{else}} --}}
 
-    {{/if}}
-
-    {{#if isLoggedOut}}
-
-    {{!-- {{else}} --}}
-
-    {{/if}}
+    {{!-- {{/ isLoggedIn}} --}}
 
   </div>
     {{{body}}}
