--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -1,13 +1,10 @@
-
-
-
 {{!-- {{#each data.}} --}}
 <h1>{{data.name}} TITULO</h1>
 <div>
     <div>
         <h4>Imagen</h4>
         
-        <img src="{{data.url}}" alt="portada">
+        <img src="{{data.results.url}}" alt="portada">
 
     </div>
     <div>
