--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,10 +14,11 @@
     <div class="menu">
       <ul>
         <li class="boton-menu"><a href="">///</a>
-          <ul> 
-            <li class="despe-menu"><a href="/games/game-list">Games</a></li>
-            <li class="despe-menu"><a href="/Opinion">Opinions</a></li>
-            <li class="despe-menu"><a href="/top-games">Top Games</a></li>
+        
+          <ul class="despe-menu"> 
+            <li><a href="/games/game-list">Games</a></li>
+            <li><a href="/Opinion">Opinions</a></li>
+            <li><a href="/top-games">Top Games</a></li>
           </ul>
         </li>
       </ul>
