--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -1,14 +1,14 @@
 
-<h3 class="game-title">TITULO: <p>{{data.name}}</p></h3>
+<h3 class="game-title"><p>{{data.name}}</p></h3>
 <div class="container">
     <div> 
         <img src="{{data.background_image}}" alt="portada" width="500px" height="400px">
     </div>
     <div class="data-game">
-        <h4>Nota del juego: {{data.rating}}</h4>
+        <h4>Score: {{data.rating}}</h4>
         <p></p>
 
-        <h4>Descripcion: </h4>
+        <h4>description: </h4>
         <p>{{data.description_raw}}</p>
         <h4>Release: {{data.released}}</h4>
         <p></p>
@@ -16,4 +16,33 @@
             <button><a href="/games/edit/{{data.id}}">Add to favourite</a></button>
 </div>
 
+<br><br><br><br>
+<div id="images">
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="" class="d-block w-100" alt="">
+    </div>
+    <div class="carousel-item">
+      <img src="" class="d-block w-100" alt="">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
 
