--- a/views/games/game-list.hbs
+++ b/views/games/game-list.hbs
@@ -1,5 +1,5 @@
 <h2>List of Games</h2>
-
+<div class="container-games">
 {{#each data}}
     <div class="oneGame">
      <img src="{{background_image}}" alt="img" width="300px" height="250px">
@@ -10,3 +10,5 @@
     </div>
     
 {{/each}}
+
+</div>
