--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,7 +29,7 @@
     
     {{#if isLoggedIn}}
     <a href="/auth/profile">Profile</a>
-    <a href="/auth/reviews">Your reviews</a>
+    <a href="/auth/your-reviews">Your reviews</a>
     <a href="/auth/logout">Log Out</a>
 
 
