--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -13,7 +13,7 @@
         <h4>Release: {{data.released}}</h4>
         <p></p>
 
-            <button><a href="/games/edit/{{data.id}}">Add to favourite</a></button>
+            <button><a href="/games/edit/{{data.id}}/{{data.name}}">Add to favourite</a></button>
 </div>
 
 <br><br><br><br>
