--- a/views/auth/your-reviews.hbs
+++ b/views/auth/your-reviews.hbs
@@ -7,7 +7,7 @@
 <p>Status: {{status}}</p>
 <p>Comment: {{comment}}</p>
 <form action="/auth/{{id}}/delete" method="POST">
-      <button><a href="">Delete</a></button>
+      <button>Delete</button>
     </form>
 
 {{/each}}
