--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,20 @@
 body {
   margin: 0px;
   padding: 50px 0px;
+    background: repeating-linear-gradient(
+      45deg,
+      rgb(0, 0, 0) 20px,
+      rgb(0, 0, 0) 40px,
+      #DF6C4F 40px,
+      #DF6C4F 60px
+    );
+}
+
+
+.logo-name{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -116,17 +130,18 @@ h1 {
   align-items: flex-start;
   align-content: stretch;
   border-radius: 10px;
-  border: 5px double #dd9103;
+  border: 5px double #000000;
+  background-color: #dd9103;
 
 }
 .data-game button{
   border: 10px #dd9103;
-  background-color: white;
+  background-color: #dd9103;
 
 }
 
 .data-game button:hover{
-  background-color: #dd9103;
+  background-color: rgb(97, 66, 9);
 }
 
 .data-game a{
