--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <div class="container-menu">
     <div class="menu">
       <ul>
         <li class="boton-menu"><a href="">///</a>
@@ -24,6 +25,7 @@
     
       
     </div>
+    
   <div class="menu2">
     <a href="/">Home</a>
     
@@ -38,8 +40,12 @@
     <a href="/auth/signup">Sign Up</a>
     
     {{/if}}
+    
 
   </div>
+  
+  </div>
+
 
 
     {{{body}}}
