--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 
        
        <div class="logo-name">
-        <img src="/images/teragaming.png" alt="" width="600px" height="338"> 
+        <img src="/images/teragaming-removebg-preview.png" alt="" width="600px" height="338"> 
        </div>
+
 
