--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   padding: 50px 0px;
-  background:fixed;
+  background:scroll;
   background-image: url(/images/d2SwPh.jpg);
 }
 
