--- a/views/games/game-list.hbs
+++ b/views/games/game-list.hbs
@@ -15,4 +15,9 @@
     <p style="color: red;">{{errorMessage}}!!!</p>
 {{/if}}
 
+<form action="/games/game-list/{{pageNum}}">
+    <button>Next page</button>
+</form>
+
+
 </div>
