--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,16 +1,26 @@
-<h2>Log in</h2>
-
+<div class="login-box">
+<h3 class="title-rev">Log in</h3>
 <form action="/auth/login" method="POST">
+<div class="user-box">
    <label> Username
       <input type="text" name="username">
    </label>
    <label> Password
       <input type="password" name="password">
-   </label>
+   </div>
+      <a href=""><button class="login-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      
+    </button>Submit</a>
 
-   <button type="submit">Submit</button>
-</form>
 
+<div class="error-m">
 {{#if errorMessage}}
    {{errorMessage}}
 {{/if}}
+</form>
+</div>
+</div>
