--- a/views/games/game-list.hbs
+++ b/views/games/game-list.hbs
@@ -1,4 +1,4 @@
-<h2>List of Games</h2>
+<h3 class="title-rev">Games List</h3>
 <div class="container-games">
 {{#each data}}
     <div class="oneGame">
