--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,19 +8,19 @@
    <label> Password
       <input type="password" name="password">
    </div>
-      <a href=""><button class="login-btn">
+      <button class="login-btn">
       <span></span>
       <span></span>
       <span></span>
       <span></span>
-      
-    </button>Submit</a>
+      Submit
+    </button>
 
 
 <div class="error-m">
 {{#if errorMessage}}
    {{errorMessage}}
 {{/if}}
-</form>
 </div>
+</form>
 </div>
