--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,7 +182,7 @@ body {
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: rgb(255, 255, 255);
   margin-bottom: 30px;
   border: none;
   border-bottom: 1px solid #dd910369;
