--- a/views/games/game-list.hbs
+++ b/views/games/game-list.hbs
@@ -15,7 +15,7 @@
     <p style="color: red;">{{errorMessage}}!!!</p>
 {{/if}}
 
-<form action="/games/game-list/{{pageNum}}">
+<form action="/games/game-list/{{data.next}}">
     <button>Next page</button>
 </form>
 
