--- a/views/auth/your-reviews.hbs
+++ b/views/auth/your-reviews.hbs
@@ -1,14 +1,17 @@
 <h3 class="title-rev">Your reviews</h3>
-<div class="container-reviews">
-{{#each showAll}}
 
-<p>Game: {{name}}</p>
-<p>Score: {{score}}</p>
-<p>Status: {{status}}</p>
-<p>Comment: {{comment}}</p>
+{{!-- {{#each showAll}} --}}
+<div class="container-reviews">
+  <div class="comment-p">
+<h4>Game:</h4> <p> {{showAll.name}}</p>
+<h4>Score:</h4><p>{{showAll.score}}</p>
+<h4>Status:</h4><p>{{showAll.status}}</p>
+  <h4>Comment:</h4><p>{{showAll.comment}}</p>
+  </div>  
+  <div class="btn-revi">
 <form action="/auth/{{id}}/delete" method="POST">
       <button>Delete</button>
     </form>
-
-{{/each}}
-</div>
+    </div>
+  </div>
+{{!-- {{/each}} --}}
