--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,11 @@ body {
 
 
 .logo-name{
-  padding-left: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  image-resolution: 2000dpi;
+  
 }
 
 
@@ -697,4 +701,30 @@ body {
 
 .error-m{
   color: crimson;
+}
+
+.container-reviews{
+  display: inline-flex;
+  flex-direction: column;
+  align-items:center;
+  text-align: left;
+  flex-grow: 1;
+  width: 450px;
+  height: 450px;
+  margin: 80px 60px;
+  background-color: #dd9103;
+}
+
+.comment-p h4{
+  display: flex;
+  text-align: left;
+}
+
+.comment-p p {
+  display: flex;
+  text-align: center;
+}
+
+.btn-revi{
+  margin-top: 40px;
 }
