--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
         
           <ul class="despe-menu"> 
               <li><a href="/games/game-list">Games</a></li>
-              <li><a href="/Opinion">Opinions</a></li>
+              <li><a href="/auth/opinions">Opinions</a></li>
               <li><a href="/top-games">Top Games</a></li>
           </ul>
         </li>
