--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,4 +4,6 @@
         <img src="/images/teragaming-removebg-preview.png" alt="" width="600px" height="338"> 
        </div>
 
-
+{{#if errorMessage}}
+    <p style="color: red;">{{errorMessage}}!!!</p>
+{{/if}}
