--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -1,19 +1,30 @@
 
-<h3 class="game-title"><p>{{data.name}}</p></h3>
+<h3 class="game-title"><p>{{gameData.name}}</p></h3>
 <div class="container">
     <div> 
-        <img src="{{data.background_image}}" alt="portada" width="800px" height="450px">
+        <img src="{{gameData.background_image}}" alt="portada" width="800px" height="450px">
     </div>
     <div class="data-game">
-        <h4>Score: {{data.rating}}</h4>
+        <h4>Score: {{gameData.rating}}</h4>
         <p></p>
 
         <h4>description: </h4>
-        <p>{{data.description_raw}}</p>
-        <h4>Release: {{data.released}}</h4>
+        <p>{{gameData.description_raw}}</p>
+        <h4>Release: {{gameData.released}}</h4>
         <p></p>
 
-            <button><a href="/games/edit/{{data.id}}/{{data.name}}">Add to favourite</a></button>
+            <button><a href="/games/edit/{{gameData.id}}/{{gameData.name}}">Add to favourite</a></button>
+</div>
+<div>
+    <h3>Coments</h3>
+
+    {{#each allGames}}
+
+    <h4>{{createBy.username}}</h4>
+    <p>{{comment}}</p>
+
+    {{/each}}
+
 </div>
     
 
