--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   background-size: 100% 100%;
   background-image: url(/images/d2SwPh.jpg);
 }
-
+/* Title style */
 .title-rev{
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@ body {
 
 }
 
-
+/* Logo style */
 .logo-name{
   display: flex;
   justify-content: center;
@@ -24,7 +24,7 @@ body {
   
 }
 
-
+/* Dinamic Menu */
 .menu{
   position: relative;
   padding-left: 40px;
@@ -72,6 +72,7 @@ body {
   color: #dd9103;
 }
 
+/* Nav menu */
 .menu2{
   text-align:right;
   margin: 10px 20px;
@@ -85,6 +86,7 @@ body {
   padding-left: 15px;
 }
 
+/* Game List */
 .oneGame{
   display: inline-flex;
   flex-direction: column;
@@ -111,11 +113,7 @@ body {
   color: black;
 }
 
-.menu-logo{
-  display: flex;
-  justify-content: center;
-  padding: 50px 50px;
-}
+/*  */
 .comment-box{
   resize:none; 
 }
@@ -165,6 +163,7 @@ body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* Form Login */
 .login-box {
   position: absolute;
   top: 50%;
@@ -432,6 +431,7 @@ body {
   border: none;
 }
 
+/* Form SignUp */
 .signup-box {
   position: absolute;
   top: 50%;
@@ -699,32 +699,228 @@ body {
   border: none;
 }
 
-.error-m{
-  color: crimson;
-}
 
+/* Opinions Style */
 .container-reviews{
   display: inline-flex;
   flex-direction: column;
-  align-items:center;
-  text-align: left;
   flex-grow: 1;
-  width: 450px;
-  height: 450px;
-  margin: 80px 60px;
-  background-color: #dd9103;
+  width: 430px;
+  height: auto;
+  padding-left: 20px;
+  margin: 60px 60px;
+  background-color: #dd9103a2;
 }
 
-.comment-p h4{
-  display: flex;
-  text-align: left;
+
+/* Review Content */
+.review-box {
+  position: absolute;
+  margin-top: 20px;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  text-align: flex-end;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
 }
 
-.comment-p p {
-  display: flex;
-  text-align: center;
+.review-box .user-box {
+  position: relative;
+  color: #dd9103;
 }
 
-.btn-revi{
+.review-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: black;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #dd910369;
+  outline: none;
+  background: transparent;
+}
+
+.review-box form button {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #dd9103;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
   margin-top: 40px;
+  letter-spacing: 4px
+}
+
+.review-box button:hover {
+  background: #dd9103;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #dd9103,
+              0 0 25px #dd9103,
+              0 0 50px #dd9103,
+              0 0 100px #dd9103;
+}
+/* Page Buttons */
+.page-btn{
+  display: flex;
+  text-align: end;
+  justify-content: end;
+  margin-right: 50px;
+}
+
+.page-btn button{
+  color: #dd9103;
+  background-color: transparent;
+  border: none;
+}
+
+.page-btn button:hover {
+  background: #dd9103;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #dd9103,
+              0 0 25px #dd9103,
+              0 0 50px #dd9103,
+              0 0 100px #dd9103;
+}
+
+
+/* Delete button */
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One'); 
+
+
+/*--Button Styles--*/
+.btn-slice {
+padding: 1.2rem 2.0rem;
+border: #dd9103;
+background-color: transparent;
+border-radius: 0rem;
+color: #dd9103;
+font-size: 10;
+font-weight: 900;
+letter-spacing: 0.7rem;
+  position: relative;
+  
+  -webkit-transition: all 1000ms cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
+  -webkit-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -moz-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -o-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+
+  -webkit-transition-timing-function: cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
+  -webkit-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -moz-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -o-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+}
+
+.btn-slice .top  {
+position: relative;
+height: 6px;
+overflow: hidden;
+  top: 0;
+  -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+  -webkit-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -moz-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -o-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+
+  -webkit-transition-timing-function: cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+  -webkit-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -moz-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -o-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+  
+  -webkit-transition-delay:0.35s;     
+  -moz-transition-delay:0.35s; 
+  -ms-transition-delay:0.35s;     
+  -o-transition-delay:0.35s;     
+  transition-delay:0.35s;
+}
+
+.btn-slice .bottom  {
+position: relative;
+height: 6px;
+overflow: hidden;
+  bottom: 0;
+  -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+  -webkit-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -moz-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -o-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+
+  -webkit-transition-timing-function: cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+  -webkit-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -moz-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  -o-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+  transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+  
+  -webkit-transition-delay:0.35s;     
+  -moz-transition-delay:0.35s; 
+  -ms-transition-delay:0.35s;     
+  -o-transition-delay:0.35s;     
+  transition-delay:0.35s;
+}
+
+.btn-slice .bottom span {
+  top: -6px;
+  position: absolute;
+  left: 0;
+}
+
+.btn-slice:hover .top {
+top: -5px;
+  -webkit-transition-delay:0.35s;     
+  -moz-transition-delay:0.35s; 
+  -ms-transition-delay:0.35s;     
+  -o-transition-delay:0.35s;     
+  transition-delay:0.35s; 
+}
+
+.btn-slice:hover .bottom {
+bottom: -5px;
+  -webkit-transition-delay:0.35s;     
+  -moz-transition-delay:0.35s; 
+  -ms-transition-delay:0.35s;     
+  -o-transition-delay:0.35s;     
+  transition-delay:0.35s; 
+}
+.btn-slice:hover, .btn-slice:focus, .btn-slice:active {
+margin-left: 10px;
+}
+.btn-slice:before{
+height: 1px;
+width: 60px;
+background-color: #ffffff;
+position: absolute;
+margin-top: 6px;
+right: -35px;
+  
+  -webkit-transition: all 1000ms cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
+  -webkit-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -moz-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -o-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+
+  -webkit-transition-timing-function: cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
+  -webkit-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -moz-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  -o-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+  transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+}
+.btn-slice:hover:before{
+width: 130%;
+}
+/* Error message */
+.error-m{
+  color: crimson;
 }
