--- a/views/games/edit.hbs
+++ b/views/games/edit.hbs
@@ -1,18 +1,21 @@
-<h2>Reviews</h2> 
 
+<div class="review-box"></div>
     
 <form action="/games/create/{{id}}/{{name}}" method="POST">
+    <div class="review-box">
     <h5>Game: {{name}}</h5>
-    <label for="score"><h5>Your Score</h5></label>
+    <label for="score"><h5>Score:</h5></label>
     <input type="number" name="score"><br>
-    <label for="status"><h5>Status</h5></label>
+    <label for="status"><h5>Status:</h5></label>
     <input type="text" name="status"><br>
     <div>
         <textarea type="text"class="comment-box" name="comment" cols="40" rows="6" maxlength="250" wrap="hard" placeholder="Write here your Opinion"></textarea><br>
         <div class="comment-char">
         <p>*Max. 250 characters*</p>
         </div>
-        <button class="btn-save">Save it</button>
+        </div>
+        <button class="review-btn">Save it</button>
     </div>
 
 </form>
+</div>
