--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -15,7 +15,7 @@
 
             <button><a href="/games/edit/{{gameData.id}}/{{gameData.name}}">Add to favourite</a></button>
 </div>
-<div>
+<div class="container-comments">
     <h3>Coments</h3>
 
     {{#each allGames}}
