--- a/views/games/game-list.hbs
+++ b/views/games/game-list.hbs
@@ -29,7 +29,7 @@
 {{!-- {{#if errorMessage}}
     <p style="color: red;">{{errorMessage}}!!!</p>
 {{/if}} --}}
-
+<div class="page-btn">
 {{#if firstPage}}
 <form action="/games/game-list/previous">
     <button disabled="true">Previous Page</button>
