--- a/views/games/game-details.hbs
+++ b/views/games/game-details.hbs
@@ -11,19 +11,21 @@
         <h4>description: </h4>
         <p>{{gameData.description_raw}}</p>
         <h4>Release: {{gameData.released}}</h4>
-        <p></p>
 
             <button><a href="/games/edit/{{gameData.id}}/{{gameData.name}}">Add to favourite</a></button>
 </div>
-<div>
+<br><br><br><br>
+<div class="container-comments">
     <h3>Coments</h3>
 
-    {{#each allGames}}
-
-    <h4>{{createBy.username}}</h4>
-    <p>{{comment}}</p>
-
-    {{/each}}
+    
+    
+        {{#each allGames}}
+        <h4>{{createBy.username}}</h4>
+        <p>{{comment}}</p>
+        {{/each}}
+    
+    
 
 </div>
     
