--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -114,6 +114,27 @@ body {
 }
 
 /*  */
+
+.container-comments{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: normal;
+  align-content: normal;
+  position: absolute;
+  
+  
+  border-radius: 10px;
+  border: 5px double #000000;
+  background-color: #dd9103;
+}
+
+
+.game-comments{
+
+}
+
 .comment-box{
   resize:none; 
 }
@@ -710,6 +731,7 @@ body {
   padding-left: 20px;
   margin: 60px 60px;
   background-color: #dd9103a2;
+
 }
 
 
