--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -22,106 +22,72 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.xtrafondos.com/descargar.php?id=4005&resolucion=3840x2160" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Elden Ring</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.whatspaper.com/wp-content/uploads/2021/10/hollow-knight-wallpaper-whatspaper-5.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Holow Night</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://files.wallpaperpass.com/2019/10/zelda%20breath%20of%20the%20wild%20wallpaper%20086%20-%201920x1080.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Zelda</h5>
+        <h5>Zelda Breath of the Wild</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
         <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://i.pinimg.com/originals/92/d2/83/92d283050804661f7e8434e4dc30cfe7.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Fallout New Vegas</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/blog/hero/mw-wz/WZ-Season-Three-Announce-TOUT.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>5 slide label</h5>
+        <h5>Call of Dudy WarZone</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://cdn.wallpapersafari.com/56/96/SrpuJD.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>6 slide label</h5>
+        <h5>GTA V</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://wallpaperboat.com/wp-content/uploads/2021/04/23/76895/nier-automata-13.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>7 slide label</h5>
+        <h5>Nier Automata</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://wardea.com/wp-content/uploads/2022/01/pokemon-legends-arceus-03.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>8 slide label</h5>
+        <h5>Pokemon Arseus</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://i.3djuegos.com/juegos/17054/horizon_zero_dawn_2/fotos/maestras/horizon_zero_dawn_2-5187118.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>9 slide label</h5>
+        <h5>Horizon Forbidden West</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://p4.wallpaperbetter.com/wallpaper/101/21/181/5bd1b65e80946-wallpaper-preview.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>10 slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>11 slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>12 slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>13 slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>14 slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div><div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>15 slide label</h5>
+        <h5>God of War</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
