--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,10 +130,9 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: normal;
   align-content: normal;
-  position: absolute;
   
   
   border-radius: 10px;
