--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -768,6 +768,11 @@ body {
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
 }
+.review-btn{
+  color: white;
+  background-color: transparent;
+  border: none;
+}
 
 .review-box .user-box {
   position: relative;
