--- a/views/auth/opinions.hbs
+++ b/views/auth/opinions.hbs
@@ -1,11 +1,12 @@
 <h3 class="title-rev">Reviews</h3>
 {{#each showAll}}
-<div class="container-reviews">
+  <div class="container-reviews">
 
-<h4>User:</h4><p>{{createBy.username}}</p>
-<h4>Game:</h4> <p> {{name}}</p>
-<h4>Score:</h4><p>{{score}}</p>
-<h4>Status:</h4><p>{{status}}</p>
-  <h4>Comment:</h4><p>{{comment}}</p>
+    <h4>User:</h4><p>{{createBy.username}}</p>
+    <h4>Game:</h4>
+    <p> {{name}}</p>
+    <h4>Score:</h4><p>{{score}}</p>
+    <h4>Status:</h4><p>{{status}}</p>
+    <h4>Comment:</h4><p>{{comment}}</p>
   </div>
 {{/each}}
