--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,12 @@
-
-       
-       <div class="logo-name">
-        <img src="/images/teragaming-removebg-preview.png" alt="" width="900px" height="250"> 
-       </div>
+<div class="logo-name">
+  <img
+    src="/images/teragaming-removebg-preview.png"
+    alt=""
+    width="900px"
+    height="250"
+  />
+</div>
 
 {{#if errorMessage}}
-    <p style="color: red;">{{errorMessage}}!!!</p>
+  <p style="color: red;">{{errorMessage}}!!!</p>
 {{/if}}
