--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,92 +1,221 @@
-
 <h3 class="title-rev">Welcome {{user.username}}</h3>
 
-
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+<div
+  id="carouselExampleCaptions"
+  class="carousel slide"
+  data-bs-ride="carousel"
+>
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="11" aria-label="Slide 12"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="12" aria-label="Slide 13"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="13" aria-label="Slide 14"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="14" aria-label="Slide 15"></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="0"
+      class="active"
+      aria-current="true"
+      aria-label="Slide 1"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="1"
+      aria-label="Slide 2"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="2"
+      aria-label="Slide 3"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="3"
+      aria-label="Slide 4"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="4"
+      aria-label="Slide 5"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="5"
+      aria-label="Slide 6"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="6"
+      aria-label="Slide 7"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="7"
+      aria-label="Slide 8"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="8"
+      aria-label="Slide 9"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="9"
+      aria-label="Slide 10"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="10"
+      aria-label="Slide 11"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="11"
+      aria-label="Slide 12"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="12"
+      aria-label="Slide 13"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="13"
+      aria-label="Slide 14"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="14"
+      aria-label="Slide 15"
+    ></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.xtrafondos.com/descargar.php?id=4005&resolucion=3840x2160" class="d-block w-100" alt="...">
+      <img
+        src="https://www.xtrafondos.com/descargar.php?id=4005&resolucion=3840x2160"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Elden Ring</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://www.whatspaper.com/wp-content/uploads/2021/10/hollow-knight-wallpaper-whatspaper-5.jpg" class="d-block w-100" alt="...">
+      <img
+        src="https://www.whatspaper.com/wp-content/uploads/2021/10/hollow-knight-wallpaper-whatspaper-5.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Holow Night</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://files.wallpaperpass.com/2019/10/zelda%20breath%20of%20the%20wild%20wallpaper%20086%20-%201920x1080.png" class="d-block w-100" alt="...">
+      <img
+        src="https://files.wallpaperpass.com/2019/10/zelda%20breath%20of%20the%20wild%20wallpaper%20086%20-%201920x1080.png"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Zelda Breath of the Wild</h5>
       </div>
     </div>
-        <div class="carousel-item">
-      <img src="https://i.pinimg.com/originals/92/d2/83/92d283050804661f7e8434e4dc30cfe7.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img
+        src="https://i.pinimg.com/originals/92/d2/83/92d283050804661f7e8434e4dc30cfe7.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Fallout New Vegas</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/blog/hero/mw-wz/WZ-Season-Three-Announce-TOUT.jpg" class="d-block w-100" alt="...">
+      <img
+        src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/blog/hero/mw-wz/WZ-Season-Three-Announce-TOUT.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Call of Dudy WarZone</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://cdn.wallpapersafari.com/56/96/SrpuJD.jpg" class="d-block w-100" alt="...">
+      <img
+        src="https://cdn.wallpapersafari.com/56/96/SrpuJD.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>GTA V</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://wallpaperboat.com/wp-content/uploads/2021/04/23/76895/nier-automata-13.jpg" class="d-block w-100" alt="...">
+      <img
+        src="https://wallpaperboat.com/wp-content/uploads/2021/04/23/76895/nier-automata-13.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Nier Automata</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://wardea.com/wp-content/uploads/2022/01/pokemon-legends-arceus-03.jpeg" class="d-block w-100" alt="...">
+      <img
+        src="https://wardea.com/wp-content/uploads/2022/01/pokemon-legends-arceus-03.jpeg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Pokemon Arceus</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://i.3djuegos.com/juegos/17054/horizon_zero_dawn_2/fotos/maestras/horizon_zero_dawn_2-5187118.jpg" class="d-block w-100" alt="...">
+      <img
+        src="https://i.3djuegos.com/juegos/17054/horizon_zero_dawn_2/fotos/maestras/horizon_zero_dawn_2-5187118.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>Horizon Forbidden West</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://p4.wallpaperbetter.com/wallpaper/101/21/181/5bd1b65e80946-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+      <img
+        src="https://p4.wallpaperbetter.com/wallpaper/101/21/181/5bd1b65e80946-wallpaper-preview.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
       <div class="carousel-caption d-none d-md-block">
         <h5>God of War</h5>
       </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleCaptions"
+    data-bs-slide="prev"
+  >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleCaptions"
+    data-bs-slide="next"
+  >
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
