--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,30 +1,33 @@
 <div class="signup-box">
-<h3>Sign Up</h3>
-<form action="/auth/signup" method="POST">
-<div class="user-box">
-   <label> Username
-      <input type="text" name="username">
-   </label>
-   <label for="email"> E-Mail
-      <input type="email" name="email">
-   </label>
-   <label> Password
-      <input type="password" name="password">
-   </label>
-   </div>
+  <h3>Sign Up</h3>
+  <form action="/auth/signup" method="POST">
+    <div class="user-box">
+      <label>
+        Username
+        <input type="text" name="username" />
+      </label>
+      <label for="email">
+        E-Mail
+        <input type="email" name="email" />
+      </label>
+      <label>
+        Password
+        <input type="password" name="password" />
+      </label>
+    </div>
 
-   <button class="signup-btn">
-       <span></span>
+    <button class="signup-btn">
+      <span></span>
       <span></span>
       <span></span>
       <span></span>
       Submit
-      </button>
-<div class="error-m">
-{{#if errorMessage}}
-   {{errorMessage}}
-   
-{{/if}}
-</div>
-</form>
+    </button>
+    <div class="error-m">
+      {{#if errorMessage}}
+        {{errorMessage}}
+
+      {{/if}}
+    </div>
+  </form>
 </div>
