--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,56 +1,47 @@
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-
   <body>
     <div class="container-menu">
-    <div class="menu">
-      <ul>
-        <li class="boton-menu"><a href="">///</a>
-        
-          <ul class="despe-menu"> 
+      <div class="menu">
+        <ul>
+          <li class="boton-menu"><a href="">///</a>
+            <ul class="despe-menu">
               <li><a href="/games/game-list">Games</a></li>
               <li><a href="/auth/opinions">Opinions</a></li>
-          </ul>
-        </li>
-      </ul>
-    
-      
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="menu2">
+        <a href="/" class="menu2-a">Home</a>
+        {{#if isLoggedIn}}
+          <a href="/auth/profile" class="menu2-a">Profile</a>
+          <a href="/auth/your-reviews" class="menu2-a">Your reviews</a>
+          <a href="/auth/logout" class="menu2-a">Log Out</a>
+        {{else}}
+          <a href="/auth/login" class="menu2-a">Log In</a>
+          <a href="/auth/signup" class="menu2-a">Sign Up</a>
+        {{/if}}
+      </div>
     </div>
-    
-  <div class="menu2">
-    <a href="/" class="menu2-a">Home</a>
-    
-    {{#if isLoggedIn}}
-    <a href="/auth/profile" class="menu2-a">Profile</a>
-    <a href="/auth/your-reviews" class="menu2-a">Your reviews</a>
-    <a href="/auth/logout" class="menu2-a">Log Out</a>
-
-
-    {{else}}
-    <a href="/auth/login" class="menu2-a">Log In</a>
-    <a href="/auth/signup" class="menu2-a">Sign Up</a>
-    
-    {{/if}}
-    
-
-  </div>
-  
-  </div>
-
-
-
     {{{body}}}
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="/js/script.js"></script>
   </body>
-
 </html>
